--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,13 +1,19 @@
 //VARIABLES 
 $color-primary: #ffffff;
 $color-secondary: rgb(129, 0, 0);
+$color-thertiary: rgb(107, 107, 107);
 
 $color-card-1: rgb(22, 21, 78);
+
+$color-kids: rgb(159, 245, 245);
+$color-gold: rgb(248, 238, 142);
+$color-std: white;
 
 //FONT VARIABLES
 $font-primary: 'Nunito', sans-serif;
 $font-secondary: 'Josefin Sans', sans-serif;
 $font-navbar: 'Abril Fatface', cursive;
+$font-cards: 'Cabin Sketch', cursive;
 
 //MEDIA QUERIES 
 $bp-largest: 62.5em; //1000px
