--- a/sass/_price.scss
+++ b/sass/_price.scss
@@ -2,8 +2,8 @@
     align-self: center;
     justify-self: center;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-column-gap: 4rem;
+    grid-template-columns: repeat(3, 27rem);
+    grid-column-gap: 11rem;
     height: 35rem;
 
     font-size: 10rem;
