--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -36,6 +36,7 @@
             text-decoration: none;
             text-transform: uppercase;
             display: block;
+            transition: transform ease .2s;
         }
 
         &-link:hover,
