--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -2,3 +2,8 @@
 .mb-md { margin-bottom: 3rem; }
 .mb-lg { margin-bottom: 4rem; }
 .mb-hg { margin-bottom: 8rem; }
+.heading1 {
+    font-family: $font-primary;
+    color: $color-primary;
+    font-size: 3rem;
+}
