--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -17,6 +17,10 @@ $font-cards: 'Cabin Sketch', cursive;
 //MEDIA QUERIES 
 $bp-largest: 62.5em; //1000px
 $bp-large: 50em; //800px
+$bp-medium: 43.75em; //700px
+$bp-small: 25em; //400px
+
+
 
 *,
 *::before,
