--- a/sass/_aboutus.scss
+++ b/sass/_aboutus.scss
@@ -28,6 +28,10 @@
         //flex-direction: column;
         text-align: center;
 
+        @media only screen and (max-width: $bp-small) {
+            grid-column: 1/ span 3;
+        }
+
         span,
         button {
             display: block;
@@ -56,6 +60,10 @@
             color: white;
             font-size: 1.5rem;
         }
+
+        @media only screen and (max-width: $bp-small) {
+            grid-column: 1/ span 3;
+        }
     }
 
     &__hours {
@@ -68,6 +76,10 @@
             margin: 2rem auto;
             color: white;
             font-size: 1.5rem;
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            grid-column: 1/ span 3;
         }
     }
 }
